Kyverno/Task1(Enforcing Resource Limits)/TestPodPolicy.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-no-limits
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
